--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f4f4f9;
+    background-color: rgba(4, 46, 75, 0.473);
 }
 
 header {
@@ -20,22 +20,51 @@ nav a {
 
 div.caixa {
     background: white;
-    margin: 20px;
-    padding: 20px;
-    border: 1px solid #ccc;
+    margin: 58px;
+    padding: 10px 980px 0px 50px;
+    border: 3px solid #ccc;
     box-shadow: 2px 2px 10px rgba(0,0,0,0.2);
     border-radius: 8px;
-    text-align: center;
+    padding: auto;
+
 }
 
 img {
-    max-width: 100%;
-    height: auto;
+    max-width: 380px;
+    height: 220px;
     border-radius: 5px;
     cursor: pointer;
     transition: 0.3s;
+    display: flex;
 }
 
 img:hover {
     transform: scale(1.05);
+}
+
+.hobs{
+    background: gray;
+    padding: 40px;
+    border: 2px rgba(4, 46, 75, 0.473) solid;
+    box-shadow: 7px 8px 10px rgba(7, 112, 182, 0.473);
+    border-radius: 8px;
+    display: flex;
+    position: relative;
+    bottom: 154px;
+    justify-content: right;
+    justify-items: right;
+    justify-self: right;
+}
+
+.img2{
+    margin: 170px 0px 0px 320px;
+    height: 270px;
+    border: 5px solid gray;
+    border-radius: 6px;
+    box-shadow: 3px 3px 3px 3px  rgb(58, 52, 52);
+}
+
+.video{
+    position: absolute;
+    margin: 0px 30px 0px 1030px;    
 }
