--- a/css/style.css
+++ b/css/style.css
@@ -53,11 +53,6 @@ header h1 {
     margin-top: 60px;
 }
 
-
-
-
-
-
 .hobs {
   background: #f7f7f7;
   border: 1px solid #ddd;
@@ -82,10 +77,12 @@ header h1 {
   text-decoration: none;
   color: #0b5ed7;            
   font-weight: bold;
+  text-decoration: none;
 }
 
 .hobs a:hover {
   text-decoration: underline; 
+  text-decoration: none;
 }
 
 
@@ -114,3 +111,5 @@ footer .return a {
 footer .return a:hover {
     background: #555;
 }
+
+
